--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanda Yang"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "PhD student at the University of Delaware"
   location         : "Newark, DE"
   employer         :
