--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yanda Yang Personal Website"
 title_separator          : "-"
 name                     : &name "Yanda Yang"
 description              : &description "personal description"
-url                      : https://robotyyd/robotyyd.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://robotyyd.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "robotyyd/robotyyd.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
