--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/yanda-yang-ba3b61211/"
-  orcid            : "https://orcid.org/0009-0001-8492-6235"
+  orcid            : #"https://orcid.org/0009-0001-8492-6235"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
